--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.5.31~rc1+ds-1) UNRELEASED; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 30 Apr 2018 09:57:43 +0200
+
 nuitka (0.5.30+ds-1) unstable; urgency=medium
 
   * New upstream release.
