--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.5.31~rc4+ds-1) UNRELEASED; urgency=medium
+nuitka (0.5.31+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Sun, 08 Jul 2018 10:53:54 +0200
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 09 Jul 2018 08:23:02 +0200
 
 nuitka (0.5.30+ds-1) unstable; urgency=medium
 
