--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.5.32~rc1+ds-1) UNRELEASED; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 09 Jul 2018 08:34:55 +0200
+
 nuitka (0.5.31+ds-1) unstable; urgency=medium
 
   * New upstream release.
