--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.5.32~rc5+ds-1) UNRELEASED; urgency=medium
+nuitka (0.5.32+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Thu, 26 Jul 2018 10:16:16 +0200
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 28 Jul 2018 15:07:21 +0200
 
 nuitka (0.5.31+ds-1) unstable; urgency=medium
 
