--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.5.32.1+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 28 Jul 2018 20:16:29 +0200
+
 nuitka (0.5.32+ds-1) unstable; urgency=medium
 
   * New upstream release.
