--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.5.32.2+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 01 Aug 2018 17:38:43 +0200
+
 nuitka (0.5.32.1+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
