--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.5.32.4+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 10 Aug 2018 12:06:44 +0200
+
 nuitka (0.5.32.3+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
