--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.5.32.5+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 15 Aug 2018 19:06:01 +0200
+
 nuitka (0.5.32.4+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
