--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.5.32.6+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 23 Aug 2018 20:05:18 +0200
+
 nuitka (0.5.32.5+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
