--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.5.32.7+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 23 Aug 2018 22:06:00 +0200
+
 nuitka (0.5.32.6+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
