--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.5.34~rc1+ds-1) UNRELEASED; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 13 Sep 2018 19:10:04 +0200
+
 nuitka (0.5.33+ds-1) unstable; urgency=medium
 
   * New upstream release.
