--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.6.0~rc4+ds-1) UNRELEASED; urgency=medium
+nuitka (0.6.0+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Sat, 22 Sep 2018 15:01:19 +0200
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 26 Sep 2018 07:00:04 +0200
 
 nuitka (0.5.33+ds-1) unstable; urgency=medium
 
