--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.1~rc1+ds-1) UNRELEASED; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 26 Sep 2018 14:08:52 +0200
+
 nuitka (0.6.0+ds-1) unstable; urgency=medium
 
   * New upstream release.
