--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.0.3+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 06 Oct 2018 10:43:33 +0200
+
 nuitka (0.6.0.2+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
