--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.0.6+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 31 Oct 2018 09:03:57 +0100
+
 nuitka (0.6.0.5+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
