--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-nuitka (0.6.1~rc9+ds-1) UNRELEASED; urgency=medium
+nuitka (0.6.1+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Sat, 01 Dec 2018 13:26:56 +0100
+  * Depend on python-pil over python-imaging (Closes: 917694).
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 05 Jan 2019 12:41:57 +0100
 
 nuitka (0.6.0.6+ds-1) unstable; urgency=medium
 
