--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.2~rc1+ds-1) UNRELEASED; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 05 Jan 2019 12:47:16 +0100
+
 nuitka (0.6.1+ds-1) unstable; urgency=medium
 
   * New upstream release.
