--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.6.2~rc5+ds-1) UNRELEASED; urgency=medium
+nuitka (0.6.2+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Wed, 13 Feb 2019 17:50:07 +0100
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 16 Feb 2019 08:48:51 +0100
 
 nuitka (0.6.1.1+ds-1) unstable; urgency=medium
 
