--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.3~rc1+ds-1) UNRELEASED; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 16 Feb 2019 09:31:21 +0100
+
 nuitka (0.6.2+ds-1) unstable; urgency=medium
 
   * New upstream release.
