--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.6.4~rc1+ds-1) UNRELEASED; urgency=medium
+nuitka (0.6.4~rc2+ds-1) experimental; urgency=medium
 
   * New upstream pre-release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Thu, 04 Apr 2019 23:07:07 +0200
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 11 Apr 2019 16:26:30 +0200
 
 nuitka (0.6.3+ds-1) unstable; urgency=medium
 
