--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.6.4~rc7+ds-1) experimental; urgency=medium
+nuitka (0.6.4+ds-1) experimental; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Fri, 24 May 2019 08:28:08 +0200
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 07 Jun 2019 23:30:22 +0200
 
 nuitka (0.6.3.1+ds-1) experimental; urgency=medium
 
