--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.5~rc1+ds-1) experimental; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 07 Jun 2019 23:32:59 +0200
+
 nuitka (0.6.4+ds-1) experimental; urgency=medium
 
   * New upstream release.
