--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.6.5~rc5+ds-1) unstable; urgency=medium
+nuitka (0.6.5+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Tue, 23 Jul 2019 08:00:48 +0200
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 27 Jul 2019 12:07:20 +0200
 
 nuitka (0.6.4+ds-1) experimental; urgency=medium
 
