--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.6~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 27 Jul 2019 12:11:43 +0200
+
 nuitka (0.6.5+ds-1) unstable; urgency=medium
 
   * New upstream release.
