--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.6~rc8+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 16 Dec 2019 09:23:42 +0100
+
 nuitka (0.6.6~rc7+ds-1) unstable; urgency=medium
 
   * New upstream pre-release.
