--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.6.6~rc8+ds-1) unstable; urgency=medium
+nuitka (0.6.6+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Mon, 16 Dec 2019 09:23:42 +0100
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 27 Dec 2019 08:47:38 +0100
 
 nuitka (0.6.6~rc7+ds-1) unstable; urgency=medium
 
