--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.7~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 27 Dec 2019 08:53:58 +0100
+
 nuitka (0.6.6+ds-1) unstable; urgency=medium
 
   * New upstream release.
