--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
-nuitka (0.6.7~rc4+ds-1) unstable; urgency=medium
+nuitka (0.6.7+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Wed, 22 Jan 2020 06:14:59 +0100
+  * The rst2pdf dependency is finally fixed
+    (Closes: #943645) (Closes: #947573).
+
+  * Enabled package build without Python2 (Closes: #937166)
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 23 Jan 2020 12:34:10 +0100
 
 nuitka (0.6.6+ds-1) unstable; urgency=medium
 
@@ -56,7 +61,7 @@ nuitka (0.6.1+ds-1) unstable; urgency=medium
 
   * New upstream release.
 
-  * Depend on python-pil over python-imaging (Closes: 917694).
+  * Depend on python-pil over python-imaging (Closes: #917694).
 
  -- Kay Hayen <kay.hayen@gmail.com>  Sat, 05 Jan 2019 12:41:57 +0100
 
