--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.8~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 23 Jan 2020 12:48:46 +0100
+
 nuitka (0.6.7+ds-1) unstable; urgency=medium
 
   * New upstream release.
