--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.9~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 11 May 2020 17:10:21 +0200
+
 nuitka (0.6.8+ds-1) unstable; urgency=medium
 
   * New upstream release.
