--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nuitka (0.6.8.1+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+  * Corrected copyright file format to not have emails.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 15 May 2020 08:32:39 +0200
+
 nuitka (0.6.8+ds-1) unstable; urgency=medium
 
   * New upstream release.
