--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.8.3+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 23 May 2020 13:56:13 +0200
+
 nuitka (0.6.8.2+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
