--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.6.9~rc9+ds-1) unstable; urgency=medium
+nuitka (0.6.9+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Sat, 12 Sep 2020 08:56:09 +0200
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 14 Sep 2020 15:40:36 +0200
 
 nuitka (0.6.8.4+ds-1) unstable; urgency=medium
 
