--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.10~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 14 Sep 2020 15:47:47 +0200
+
 nuitka (0.6.9+ds-1) unstable; urgency=medium
 
   * New upstream release.
