--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.9.1+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 19 Sep 2020 14:38:08 +0200
+
 nuitka (0.6.9+ds-1) unstable; urgency=medium
 
   * New upstream release.
