--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.9.2+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 04 Oct 2020 12:47:36 +0200
+
 nuitka (0.6.9.1+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
