--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.9.4+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 19 Oct 2020 10:55:17 +0200
+
 nuitka (0.6.9.3+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
