--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.9.5+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 30 Oct 2020 13:49:19 +0100
+
 nuitka (0.6.9.4+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
