--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.9.6+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 04 Nov 2020 08:32:22 +0100
+
 nuitka (0.6.9.5+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
