--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.9.7+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 16 Nov 2020 11:20:22 +0100
+
 nuitka (0.6.9.6+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
