--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.6.10~rc9+ds-1) unstable; urgency=medium
+nuitka (0.6.10+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Wed, 18 Nov 2020 09:58:57 +0100
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 07 Dec 2020 12:44:03 +0100
 
 nuitka (0.6.9.7+ds-1) unstable; urgency=medium
 
