--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.11~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 07 Dec 2020 12:45:16 +0100
+
 nuitka (0.6.10+ds-1) unstable; urgency=medium
 
   * New upstream release.
