--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.10.3+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 24 Dec 2020 16:30:17 +0100
+
 nuitka (0.6.10.2+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
