--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.11~rc5+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 25 Dec 2020 10:09:29 +0100
+
 nuitka (0.6.11~rc4+ds-1) unstable; urgency=medium
 
   * New upstream pre-release.
