--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.10.4+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Tue, 29 Dec 2020 16:17:44 +0100
+
 nuitka (0.6.10.3+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
