--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.6.11~rc9+ds-1) unstable; urgency=medium
+nuitka (0.6.11+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Mon, 18 Jan 2021 10:39:23 +0100
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 23 Jan 2021 10:01:54 +0100
 
 nuitka (0.6.10.4+ds-1) unstable; urgency=medium
 
