--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.12~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 23 Jan 2021 10:15:48 +0100
+
 nuitka (0.6.11+ds-1) unstable; urgency=medium
 
   * New upstream release.
