--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.11.3+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Tue, 26 Jan 2021 11:16:07 +0100
+
 nuitka (0.6.11.2+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
