--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.11.4+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 27 Jan 2021 17:09:48 +0100
+
 nuitka (0.6.11.3+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
