--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.11.6+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 07 Feb 2021 19:59:48 +0100
+
 nuitka (0.6.11.5+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
