--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.6.12~rc6+ds-1) unstable; urgency=medium
+nuitka (0.6.12+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Sun, 07 Feb 2021 23:08:11 +0100
+ -- Kay Hayen <kay.hayen@gmail.com>  Tue, 09 Feb 2021 11:08:35 +0100
 
 nuitka (0.6.11.6+ds-1) unstable; urgency=medium
 
