--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.13~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Tue, 09 Feb 2021 11:12:40 +0100
+
 nuitka (0.6.12+ds-1) unstable; urgency=medium
 
   * New upstream release.
