--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.12.1+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 10 Feb 2021 00:23:11 +0100
+
 nuitka (0.6.12+ds-1) unstable; urgency=medium
 
   * New upstream release.
