--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.12.2+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 14 Feb 2021 14:25:06 +0100
+
 nuitka (0.6.12.1+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
