--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.12.4+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 11 Mar 2021 12:16:01 +0100
+
 nuitka (0.6.12.3+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
