--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.6.13~rc8+ds-1) unstable; urgency=medium
+nuitka (0.6.13+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Mon, 15 Mar 2021 14:26:18 +0100
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 17 Mar 2021 08:58:23 +0100
 
 nuitka (0.6.12.4+ds-1) unstable; urgency=medium
 
