--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.14~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 17 Mar 2021 11:12:27 +0100
+
 nuitka (0.6.13+ds-1) unstable; urgency=medium
 
   * New upstream release.
