--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.13.1+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 26 Mar 2021 14:28:02 +0100
+
 nuitka (0.6.13+ds-1) unstable; urgency=medium
 
   * New upstream release.
