--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.13.2+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 27 Mar 2021 19:44:51 +0100
+
 nuitka (0.6.13.1+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
