--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.13.3+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 04 Apr 2021 11:11:56 +0200
+
 nuitka (0.6.13.2+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
