--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.6.14~rc6+ds-1) unstable; urgency=medium
+nuitka (0.6.14+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Mon, 12 Apr 2021 12:51:55 +0200
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 15 Apr 2021 11:09:55 +0200
 
 nuitka (0.6.13.3+ds-1) unstable; urgency=medium
 
