--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.15~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 15 Apr 2021 17:25:47 +0200
+
 nuitka (0.6.14+ds-1) unstable; urgency=medium
 
   * New upstream release.
