--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.14.2+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 17 Apr 2021 11:03:23 +0200
+
 nuitka (0.6.14.1+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
