--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.14.4+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 18 Apr 2021 16:13:42 +0200
+
 nuitka (0.6.14.3+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
