--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.14.5+ds-1) experimental; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 22 Apr 2021 08:51:05 +0200
+
 nuitka (0.6.14.4+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
