--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.6.15~rc7+ds-1) unstable; urgency=medium
+nuitka (0.6.15~rc8+ds-1) experimental; urgency=medium
 
   * New upstream pre-release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Mon, 10 May 2021 17:22:16 +0200
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 17 May 2021 17:02:17 +0200
 
 nuitka (0.6.14.7+ds-1) unstable; urgency=medium
 
