--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.6.15~rc8+ds-1) experimental; urgency=medium
+nuitka (0.6.15+ds-1) experimental; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Mon, 17 May 2021 17:02:17 +0200
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 24 May 2021 12:26:59 +0200
 
 nuitka (0.6.14.7+ds-1) unstable; urgency=medium
 
