--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.16~rc1+ds-1) experimental; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Tue, 25 May 2021 11:35:48 +0200
+
 nuitka (0.6.15+ds-1) experimental; urgency=medium
 
   * New upstream release.
