--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.15.1+ds-1) experimental; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 31 May 2021 17:12:04 +0200
+
 nuitka (0.6.15+ds-1) experimental; urgency=medium
 
   * New upstream release.
