--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.6.16~rc7+ds-1) experimental; urgency=medium
+nuitka (0.6.16+ds-1) experimental; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Wed, 16 Jun 2021 16:18:43 +0200
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 24 Jun 2021 11:52:37 +0200
 
 nuitka (0.6.15.3+ds-1) experimental; urgency=medium
 
