--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.17~rc1+ds-1) experimental; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 24 Jun 2021 12:04:19 +0200
+
 nuitka (0.6.16+ds-1) experimental; urgency=medium
 
   * New upstream release.
