--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.16.1+ds-1) experimental; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 25 Jun 2021 16:45:43 +0200
+
 nuitka (0.6.16+ds-1) experimental; urgency=medium
 
   * New upstream release.
