--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.16.4+ds-1) experimental; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 25 Aug 2021 11:51:44 +0200
+
 nuitka (0.6.16.3+ds-1) experimental; urgency=medium
 
   * New upstream hotfix release.
