--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.16.5+ds-1) experimental; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 06 Sep 2021 10:46:40 +0200
+
 nuitka (0.6.16.4+ds-1) experimental; urgency=medium
 
   * New upstream hotfix release.
