--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.18~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 27 Sep 2021 13:46:39 +0200
+
 nuitka (0.6.17+ds-1) unstable; urgency=medium
 
   * New upstream release.
