--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.17.2+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Tue, 05 Oct 2021 17:21:29 +0200
+
 nuitka (0.6.17.1+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
