--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.17.3+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 14 Oct 2021 10:32:17 +0200
+
 nuitka (0.6.17.2+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
