--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.19~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 02 Dec 2021 17:35:09 +0100
+
 nuitka (0.6.18+ds-1) unstable; urgency=medium
 
   * New upstream release.
