--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.18.1+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 04 Dec 2021 18:39:19 +0100
+
 nuitka (0.6.18+ds-1) unstable; urgency=medium
 
   * New upstream release.
