--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.18.3+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 10 Dec 2021 17:49:19 +0100
+
 nuitka (0.6.18.2+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
