--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.18.6+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 29 Dec 2021 19:42:43 +0100
+
 nuitka (0.6.18.5+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
