--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.20~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 09 Jan 2022 13:15:30 +0100
+
 nuitka (0.6.19+ds-1) unstable; urgency=medium
 
   * New upstream release.
