--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.19.2+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 14 Jan 2022 11:03:16 +0100
+
 nuitka (0.6.19.1+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
