--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.6.19.5+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Tue, 01 Feb 2022 18:53:20 +0100
+
 nuitka (0.6.19.4+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
