--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (0.7~rc2+ds-1) unstable; urgency=medium
+nuitka (0.7+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Tue, 15 Feb 2022 11:53:43 +0100
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 20 Feb 2022 09:09:50 +0100
 
 nuitka (0.6.19.7+ds-1) unstable; urgency=medium
 
