--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.8~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 20 Feb 2022 09:54:17 +0100
+
 nuitka (0.7+ds-1) unstable; urgency=medium
 
   * New upstream release.
