--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.7.3+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 27 Feb 2022 13:58:34 +0100
+
 nuitka (0.7.2+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
