New hotfix release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.7.4+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 12 Mar 2022 13:50:50 +0100
+
 nuitka (0.7.3+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
