--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.9~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 19 May 2022 14:25:31 +0200
+
 nuitka (0.8+ds-1) unstable; urgency=medium
 
   * New upstream release.
