--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.8.4+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Tue, 07 Jun 2022 17:21:39 +0200
+
 nuitka (0.8.3+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
