New release cycle

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.0~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 23 Jun 2022 08:38:23 +0200
+
 nuitka (0.9+ds-1) unstable; urgency=medium
 
   * New upstream release.
