--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.9.1+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 26 Jun 2022 10:41:06 +0200
+
 nuitka (0.9+ds-1) unstable; urgency=medium
 
   * New upstream release.
