--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.9.4+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 07 Jul 2022 09:24:53 +0200
+
 nuitka (0.9.3+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
