--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (0.9.5+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 15 Jul 2022 13:59:28 +0200
+
 nuitka (0.9.4+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
