--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (1.0~rc9+ds-1) unstable; urgency=medium
+nuitka (1.0+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Wed, 20 Jul 2022 15:05:27 +0200
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 30 Jul 2022 16:16:40 +0200
 
 nuitka (0.9.6+ds-1) unstable; urgency=medium
 
