--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.0.2+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 08 Aug 2022 08:13:46 +0200
+
 nuitka (1.0.1+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
